Bug #11472
fix libdemangle rust changes
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Updated by John Levon over 1 year ago
As pointed out by Gergõ Doma, the fix in 11414 was not quite right: for 32-bit, we lost some additional bounds checking.
Instead, we'll lower MAX_DIGITS to 9, so rustdem_parse_num() return always fits in an int32_t.
Updated by Electric Monk over 1 year ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 899e9c20aee1ed62e7c103b3cffd0aaa17e8e679
commit 899e9c20aee1ed62e7c103b3cffd0aaa17e8e679 Author: John Levon <john.levon@joyent.com> Date: 2019-07-16T14:58:36.000Z 11472 fix libdemangle rust changes Reviewed by: Jason King <jason.brian.king@gmail.com> Approved by: Robert Mustacchi <rm@joyent.com>